--- a/html/club.html
+++ b/html/club.html
@@ -70,7 +70,7 @@
             <div class="small_nav pc_none">
                 <a href="index.html">탑테니스 목동점</a>
                 <a href="club.html" class="active">탑테니스 클럽</a>
-                <a href="lesson.html">레슨 프로그램</a>
+                <a href="lesson.html">레슨 비용 & 프로그램</a>
                 <a href="road.html">오시는길</a>
             </div>
 
