--- a/html/road.html
+++ b/html/road.html
@@ -72,7 +72,7 @@
             <div class="small_nav pc_none">
                 <a href="index.html">탑테니스 목동점</a>
                 <a href="club.html">탑테니스 클럽</a>
-                <a href="lesson.html">레슨 프로그램</a>
+                <a href="lesson.html">레슨 비용 & 프로그램</a>
                 <a href="road.html" class="active">오시는길</a>
             </div>
 
