--- a/html/road.html
+++ b/html/road.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="[탑테니스 목동점 - 홈] ">
-    <meta property="og:description" content="마포구 프리미엄 실내테니스 레슨">
-    <meta name="description" content="마포구 프리미엄  실내테니스 레슨">
-    <meta property="og:description" content="[탑테니스 목동점 - 홈] ">
+    <meta property="og:title" content="[탑테니스 목동점]">
+    <meta property="og:description" content="목동 프리미엄 실내테니스 레슨">
+    <meta property="og:image" content="https://toptennismokdong.com/assets/images/urlimage.jpeg">
+    <meta property="og:url" content="https://toptennismokdong.com/road">
+    <meta name="description" content="목동 프리미엄  실내테니스 레슨">
+    <meta property="og:description" content="[탑테니스 목동점]">
     <title>탑테니스 목동점</title>
-    <link rel="icon" href="assets/images/favicon.png" type="image/png">
+    <link rel="icon" href="https://toptennismokdong.com/assets/images/favicon.png" type="image/png">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/common.css">
